--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,14 @@
 <!-- Carousel Start -->
 
-<div id="home" class="hero d-flex align-items-center justify-content-center ">
-    <div class="p-5" style="width: 100%; max-width: 900px; ">
-        <h5 class="text-dark text-uppercase mb-md-3">We are building the future NOW</h5>
-        <h1 class="display-3 text-dark mb-md-4">WELCOME TO IR4LAB</h1>
+<div id="home" class=" d-flex align-items-center justify-content-center ">
+    <div class="hero-image-up"></div>
+    <div class="hero-image"></div>
+    <div class="hero-bg"></div>
+    <div class="hero-des d-flex justify-content-center align-items-center"> </div>
+    <div class="p-5 hero" style="width: 100%; max-width: 900px; ">
+        <h5 class="text-uppercase mb-md-3">We are building the future NOW</h5>
+        <h1 class="display-3 text-white  mb-md-4">WELCOME TO IR4LAB</h1>
         <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">Get Started</a>
     </div>
+
 </div>
