--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,35 +1,99 @@
         /********** general ************/
-
+        
         h1,
         .font-weight-black {
             font-weight: 900 !important;
         }
-
+        
         h2,
         .font-weight-bolder {
             font-weight: 800 !important;
         }
-
+        
         h3,
         .font-weight-bold {
             font-weight: 700 !important;
         }
-
+        
         h4,
         .font-weight-semi-bold {
             font-weight: 600 !important;
         }
-
+        
         h5 .font-weight-medium {
             font-weight: 500 !important;
         }
-
+        
         h6,
         .font-weight-normal {
             font-weight: 400 !important;
         }
         /********** specific ************/
-
-        .hero {
+        
+        .h1 {
+            color: #fff !important;
+        }
+        
+        h5 {
+            color: #fff;
+        }
+        
+        .hero-des {
+            position: absolute;
+            width: 100%;
+            z-index: -5;
+            border-bottom: 10px solid #fff;
+            border-left: 10px solid #fff;
+            border-right: 10px solid #fff;
+            background: rgba($color: #151F3E, $alpha: 1);
+            // border-radius: 20px;
+            height: 80vh;
+            clip-path: polygon(0 0, 100% 0, 100% 71%, 0 100%);
+        }
+        
+        .hero-bg {
+            z-index: -10;
+            position: absolute;
+            height: 100vh;
+            width: 100vw;
+            background-color: rgba($color: #fff, $alpha: 0.5);
+        }
+        
+        .btn-primary {
+            background-color: #fff !important;
+            color: #151F3E;
+            border: 1px solid #fff;
+            box-shadow: 0 0 10px #ccc;
+        }
+        
+        .hero-image-up {
+            position: absolute;
+            width: 100%;
+            z-index: -2;
+            border-bottom: 10px solid #fff;
+            border-left: 10px solid #fff;
+            border-right: 10px solid #fff;
+            background: rgba($color: #151F3E, $alpha: 0.5);
+            // border-radius: 20px;
+            height: 80vh;
+            clip-path: polygon(0 0, 100% 0, 100% 71%, 0 100%);
+        }
+        
+        .hero-image {
+            position: absolute;
+            width: 100%;
+            z-index: -3;
+            height: 80vh;
+            clip-path: polygon(0 0, 100% 0, 100% 71%, 0 100%);
+            background-image: url('../../assets/lastOnline.svg');
+            border-bottom: 10px solid #fff;
+            border-left: 10px solid #fff;
+            border-right: 10px solid #fff;
+            background-repeat: no-repeat;
+            background-position-x: center;
+            background-position-y: end;
+        }
+        
+        #home {
             height: 100vh;
         }
