--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,7 @@
 <div id="home" class=" d-flex align-items-center justify-content-center ">
     <div class="hero-image-up"></div>
     <div class="hero-image"></div>
+    <div class="hero-border"></div>
     <div class="hero-bg"></div>
     <div class="hero-des d-flex justify-content-center align-items-center"> </div>
     <div class="p-5 hero" style="width: 100%; max-width: 900px; ">
@@ -10,5 +11,7 @@
         <h1 class="display-3 text-white  mb-md-4">WELCOME TO IR4LAB</h1>
         <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">Get Started</a>
     </div>
-
+    <div class="hero-card">
+        <h6>We live in an era where technologies are evolving at a rapid pace, existing business models are disrupted and new ones are emerging. We are moving from a physical world focused on products to a digital world focused on services.</h6>
+    </div>
 </div>
