--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,20 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
-    background-color: #e5e5f7;
-    background-image: linear-gradient(#108db1 1px, transparent 1px), linear-gradient(to right, #108db1 1px, #e5e5f7 1px);
-    background-size: 200px 200px;
-    background-position-x: left;
-    background-position-y: top;
-    transition: all 15s;
+    background-color: #fff;
+    // background-image: linear-gradient(#108db1 1px, transparent 1px), linear-gradient(to right, #108db1 1px, #e5e5f7 1px);
+    // background-size: 200px 200px;
+    // background-position-x: left;
+    // background-position-y: top;
+    // transition: all 15s;
     scroll-behavior: smooth;
 }
 
-body:hover {
-    background-image: linear-gradient(#108db1 1px, transparent 1px), linear-gradient(to right, #108db1 1px, #e5e5f7 1px);
-    background-position-x: center;
-    background-position-y: center;
+// body:hover {
+//     background-image: linear-gradient(#108db1 1px, transparent 1px), linear-gradient(to right, #108db1 1px, #e5e5f7 1px);
+//     background-position-x: center;
+//     background-position-y: center;
+// }
+html,
+body {
+    height: 100%;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
