--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,19 +1,45 @@
 <div id="about">
+    <h2>About <span>us</span></h2>
     <div class="container">
         <div class="about-box">
-            <div class="left">
-                <h2>ABOUT US</h2>
-                <p>We live in an era where technologies are evolving at a rapid pace, existing business models are disrupted and new ones are emerging. We are moving from a physical world focused on products to a digital world focused on services.</p>
 
-            </div>
-            <div class="right">
-                <ul class="gradient-list">
-                    <li>IR4LAB was born because of the need of catalyst and enabler environment to make sure that nobody is left behind and to support the society of tomorrow.</li>
-                    <li>IR4LAB is committed to bring forward the goal of transforming the region’s unique strategic location into a global hub connecting three continents, Asia, Europe and Africa.</li>
-                    <li>IR4LAB is bringing the power of disruptive technologies to enable the future NOW, from development services, creating awareness, building solutions that will enable new business models or improve existing processes and most importantly
-                        building new capabilities in the MENA region.</li>
-                    <li>IR4LAB aspires to become a leader in emerging technologies, improving existing processes in different industries and enabling new business models to create added value to our communities and the society as a whole.</li>
-                </ul>
+            <div class="lists">
+
+                <div class="row1-container">
+                    <div class="box box-down cyan">
+                        <h2>Objective</h2>
+                        <p>IR4LAB was born because of the need of catalyst and enabler environment to make sure that nobody is left behind and to support the society of tomorrow.</p>
+                        <div>
+                            <fa-icon [icon]="faBullseye" size="3x"></fa-icon>
+                        </div>
+                    </div>
+
+                    <div class="box red">
+                        <h2>Commitment</h2>
+                        <p>IR4LAB is committed to bring forward the goal of transforming the region’s unique strategic location into a global hub connecting three continents, Asia, Europe and Africa.</p>
+                        <div>
+                            <fa-icon [icon]="faInfinity" size="3x"></fa-icon>
+                        </div>
+                    </div>
+
+                    <div class="box box-down blue">
+                        <h2>Power</h2>
+                        <p>IR4LAB is bringing the power of disruptive technologies to enable the future NOW, from development services, creating awareness, building solutions that will enable new business models or improve existing processes and most importantly
+                            building new capabilities in the MENA region.</p>
+                        <div>
+                            <fa-icon [icon]="faSuperpowers" size="3x"></fa-icon>
+                        </div>
+                    </div>
+                </div>
+                <div class="row2-container">
+                    <div class="box orange">
+                        <h2>Improvement</h2>
+                        <p>IR4LAB aspires to become a leader in emerging technologies, improving existing processes in different industries and enabling new business models to create added value to our communities and the society as a whole.</p>
+                        <div>
+                            <fa-icon [icon]="faStairs" size="3x"></fa-icon>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
