--- a/src/app/about-us/about-us.component.scss
+++ b/src/app/about-us/about-us.component.scss
@@ -1,179 +1,180 @@
-    /*** VARIABLES ***/
-    
-    $veryLightGray: hsl(0, 0%, 98%);
-    $weight1: 200;
-    $weight2: 400;
-    $weight3: 600;
-    $blue:hsl(212, 86%, 64%);
-    $grayishBlue: hsl(229, 6%, 66%);
-    $darkblue:hsl(234, 12%, 34%);
-    $cyan:hsl(180, 62%, 55%);
-    $orange:hsl(34, 97%, 64%);
-    $red:hsl(0, 78%, 62%);
-    $prim :#151F3E;
-    $sec:#00a2e2;
-    /* Colors */
-    
-    $black: #1d1f20;
-    $blue: #83e4e2;
-    $green: #64f581;
-    $yellow: #fddc32;
-    $white: #fafafa;
-    /*** EXTEND ***/
-    /* box-shadow */
-    
-    %boxshadow {
-        box-shadow: 0.25rem 0.25rem 0.6rem rgba(0, 0, 0, 0.05), 0 0.5rem 1.125rem rgba(75, 0, 0, 0.05);
-    }
-    
-    .container {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 20px 20px;
-    }
-    
-    .container:after {
-        content: '';
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        left: 0;
-        top: 0;
-        //background: url("../../assets/images/ig2.jpg") no-repeat center;
-        background-size: cover;
-        filter: blur(50px);
-        z-index: -1;
-    }
-    
-    .about-box {
-        max-width: 1024px;
-        justify-content: center;
-        align-items: center;
-        background-color: #fff;
-        box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
-    }
-    
-    .list {
-        padding: 25px 40px;
-    }
-    
-    h2 {
-        font-weight: 800;
-        padding: 10px;
-        text-align: center;
-    }
-    
-    h2 span {
-        color: $sec;
-    }
-    
-    p {
-        font-family: 'helvetica';
-        padding: 10px;
-        color: gray;
-        text-align: justify;
-        margin-bottom: 0;
-    }
-    
-    .Logo {
-        width: 250px;
-        padding: 15px;
-    }
-    
-    @media screen and (max-width: 880px) {
+        /*** VARIABLES ***/
+        
+        $veryLightGray: hsl(0, 0%, 98%);
+        $weight1: 200;
+        $weight2: 400;
+        $weight3: 600;
+        $blue:hsl(212, 86%, 64%);
+        $grayishBlue: hsl(229, 6%, 66%);
+        $darkblue:hsl(234, 12%, 34%);
+        $cyan:hsl(180, 62%, 55%);
+        $orange:hsl(34, 97%, 64%);
+        $red:hsl(0, 78%, 62%);
+        $prim :#151F3E;
+        $sec:#00a2e2;
+        /* Colors */
+        
+        $black: #1d1f20;
+        $blue: #83e4e2;
+        $green: #64f581;
+        $yellow: #fddc32;
+        $white: #fafafa;
+        /*** EXTEND ***/
+        /* box-shadow */
+        
+        %boxshadow {
+            box-shadow: 0.25rem 0.25rem 0.6rem rgba(0, 0, 0, 0.05), 0 0.5rem 1.125rem rgba(75, 0, 0, 0.05);
+        }
+        
         .container {
-            padding: 0;
-        }
-        .about-box {
-            grid-template-columns: 1fr;
-        }
-    }
-    
-    .box p {
-        color: $grayishBlue;
-    }
-    
-    .box {
-        border-radius: 5px;
-        box-shadow: 0px 30px 40px -20px $grayishBlue;
-        padding: 10px;
-        margin: 10px;
-    }
-    
-    @media (max-width: 450px) {
-        .box {
-            min-height: 180px;
-        }
-    }
-    
-    @media (max-width: 950px) and (min-width: 450px) {
-        .box {
-            text-align: center;
-            min-height: 180px;
-        }
-    }
-    
-    .cyan {
-        border-top: 3px solid $cyan;
-    }
-    
-    .red {
-        border-top: 3px solid $red;
-    }
-    
-    .blue {
-        border-top: 3px solid $blue;
-    }
-    
-    .orange {
-        border-top: 3px solid $orange;
-    }
-    
-    h2 {
-        color: $darkblue;
-        font-weight: $weight3;
-    }
-    
-    @media (min-width: 950px) {
-        .row1-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .row2-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .box-down {
             position: relative;
-            top: 150px;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px 20px;
+            z-index: 1;
         }
+        
+        .container:after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top: 0;
+            //background: url("../../assets/images/ig2.jpg") no-repeat center;
+            background-size: cover;
+            filter: blur(50px);
+            z-index: -1;
+        }
+        
+        .about-box {
+            max-width: 1024px;
+            justify-content: center;
+            align-items: center;
+            // box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+        }
+        
+        .list {
+            padding: 25px 40px;
+        }
+        
+        h2 {
+            font-weight: 800;
+            padding: 10px;
+            text-align: center;
+        }
+        
+        h2 span {
+            color: $sec;
+        }
+        
+        p {
+            font-family: 'helvetica';
+            padding: 10px;
+            color: gray;
+            text-align: justify;
+            margin-bottom: 0;
+        }
+        
+        .Logo {
+            width: 250px;
+            padding: 15px;
+        }
+        
+        @media screen and (max-width: 880px) {
+            .container {
+                padding: 0;
+            }
+            .about-box {
+                grid-template-columns: 1fr;
+            }
+        }
+        
+        .box p {
+            color: $grayishBlue;
+        }
+        
         .box {
-            width: 30%;
+            border-radius: 5px;
+            box-shadow: 0px 30px 40px -20px $grayishBlue;
+            padding: 10px;
+            margin: 10px;
+            background-color: #fff;
         }
-    }
-    
-    .cyan fa-icon {
-        color: $cyan;
-    }
-    
-    .orange fa-icon {
-        color: $orange;
-    }
-    
-    .red fa-icon {
-        color: $red;
-    }
-    
-    .blue fa-icon {
-        color: $blue;
-    }
-    
-    .box>div {
-        text-align: end;
-    }
+        
+        @media (max-width: 450px) {
+            .box {
+                min-height: 180px;
+            }
+        }
+        
+        @media (max-width: 950px) and (min-width: 450px) {
+            .box {
+                text-align: center;
+                min-height: 180px;
+            }
+        }
+        
+        .cyan {
+            border-top: 3px solid $cyan;
+        }
+        
+        .red {
+            border-top: 3px solid $red;
+        }
+        
+        .blue {
+            border-top: 3px solid $blue;
+        }
+        
+        .orange {
+            border-top: 3px solid $orange;
+        }
+        
+        h2 {
+            color: $darkblue;
+            font-weight: $weight3;
+        }
+        
+        @media (min-width: 950px) {
+            .row1-container {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .row2-container {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .box-down {
+                position: relative;
+                top: 150px;
+            }
+            .box {
+                width: 30%;
+            }
+        }
+        
+        .cyan fa-icon {
+            color: $cyan;
+        }
+        
+        .orange fa-icon {
+            color: $orange;
+        }
+        
+        .red fa-icon {
+            color: $red;
+        }
+        
+        .blue fa-icon {
+            color: $blue;
+        }
+        
+        .box>div {
+            text-align: end;
+        }
