--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,6 +1,6 @@
 <div id="services">
     <div class="wrapper">
-        <h3 class="header text-dark pt-3">SERVICES</h3>
+        <h2 class="header">Serv<span>ices</span></h2>
 
         <div class="cards_wrap">
             <div class="card_item">
