--- a/src/app/animated-digit/animated-digit.component.scss
+++ b/src/app/animated-digit/animated-digit.component.scss
@@ -1,8 +1,10 @@
+$prim :#151F3E;
+$sec:#00a2e2;
 .animated-digit {
     display: inline-flex;
     height: 60px;
     width: 60px;
-    color: white;
+    color: $sec;
     text-align: center;
     margin-top: 1em;
     justify-content: center;
