--- a/src/app/services/services.component.scss
+++ b/src/app/services/services.component.scss
@@ -1,95 +1,49 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;400;900&display=swap');
-* {
-    margin: 0;
-    padding: 8;
-    box-sizing: border-box;
-    font-family: 'Noto Sans JP', sans-serif;
-}
-
-.wrapper .header {
+.our-services {
+    padding-top: 110px;
+  }
+  
+  .our-services .section-heading {
     text-align: center;
-    font-size: 24px;
-    font-weight: 900;
-}
-
-.cards_wrap {
-    padding: 20px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.cards_wrap .card_item {
-    padding: 15px 25px;
-    width: 33%;
-}
-
-.cards_wrap .card_inner {
-    background: #fff;
+    margin-left: 75px;
+    margin-right: 75px;
+  }
+  
+  .our-services .container-fluid {
+    padding: 0px 80px;
+  }
+  
+  .service-item {
+    padding: 60px 30px;
+    border: 2px solid #f7f7f7;
     border-radius: 5px;
-    padding: 35px 20px;
-    min-width: 225px;
-    min-height: 315px;
-    max-height: 370px;
-    width: 100%;
-    box-shadow: 0.25rem 0.25rem 0.6rem rgb(0 0 0 / 5%), 0 0.5rem 1.125rem rgb(75 0 0 / 5%);
-}
-
-.cards_wrap .card_item svg {
+    transition: all .9s;
+    margin-bottom: 30px;
+    height: 300px;
+  }
+  
+  .service-item:hover {
+    background-color: #fff;
+    border: 2px solid transparent;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+  }
+  
+  .service-item .icon {
+    margin-top: 10px;
     width: 80px;
     height: 80px;
-    margin-bottom: 5px;
-}
+    display: inline-block;
+    text-align: center;
+    line-height: 80px;
+    background-color: #f7f7f7;
+    border-radius: 50%;
+  }
+  
 
-.cards_wrap .card_item .role_name {
-    color: rgb(3, 35, 54);
-    font-weight: 900;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    font-size: 17px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-.cards_wrap .card_item .real_name {
-    color: #b6c0c2;
-    font-size: 12px;
-    font-weight: 100;
-    margin: 5px 0 10px;
-}
-
-.cards_wrap .card_item .film {
-    font-size: 14px;
-    line-height: 24px;
-    color: #7b8ca0;
-    text-justify: distribute;
-}
-
-@media screen and (max-width: 1024px) {
-    .cards_wrap .card_item {
-        width: 33%;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .cards_wrap .card_item {
-        width: 50%;
-    }
-}
-
-@media screen and (max-width: 568px) {
-    .cards_wrap .card_item {
-        width: 100%;
-    }
-}
-
-.wrapper {
-    position: relative;
-    background-color: rgba($color: (#fff), $alpha: 0.9);
-}
-
-#services {
-    padding-top: 75px;
-}
+  
+  .service-item h4 {
+    font-size: 22px;
+    font-weight: 700;
+    color: #2a2a2a;
+    margin-bottom: 15px;
+  }
+  
