--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,25 +1,29 @@
-<div id="projects">
-    <h3 class="header text-dark pt-3">PROJECTS</h3>
 
-    <div class="card__collection d-flex justify-content-center flex-wrap">
-        <a href="https://doccerts.com/">
-            <div class="cards cards--two">
-
-                <img src="assets/images/docCert.png" class="img-responsive" alt="Cards Image">
-                <span class="cards--two__rect"></span>
-                <span class="cards--two__tri"></span>
-                <p>DocCerts</p>
-
-            </div>
-        </a>
-        <a href="https://www.seculedger.com/home">
-            <div class="cards cards--two">
-                <img src="assets/images/she.png" class="img-responsive" alt="Cards Image">
-                <span class="cards--two__rect"></span>
-                <span class="cards--two__tri"></span>
-                <p>Seculedger App</p>
-
-            </div>
-        </a>
-    </div>
-</div>
+          <div class="features-content " >
+            <div class="row justify-content-center">
+              <div class="col-lg-3">
+                <div class="features-item first-feature wow fadeInUp animated" data-wow-duration="1s" data-wow-delay="0s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0s; -moz-animation-delay: 0s; animation-delay: 0s;">
+                  <div class="first-number number">
+                    <h6>01</h6>
+                  </div>
+                  <div class="icon"></div>
+                  <h4>Reach Out</h4>
+                  <div class="line-dec"></div>
+                  <p>This HTML5 template is based on Bootstrap 5 CSS. You are free to customize anything.</p>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="features-item second-feature wow fadeInUp animated" data-wow-duration="1s" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-duration: 1s; -moz-animation-duration: 1s; animation-duration: 1s;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+                  <div class="second-number number">
+                    <h6>02</h6>
+                  </div>
+                  <div class="icon"></div>
+                  <h4>Develop a Strategy</h4>
+                  <div class="line-dec"></div>
+                  <p>Lorem ipsum dolor sit ameter consectetur adipiscing li elit sed do eiusmod.</p>
+                </div>
+              </div>
+            
+          </div>
+        </div>
+      
