--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -30,7 +30,7 @@
     position: relative;
     width : 300px;
     height : 215px;  
-    background-color : rgba(112, 215, 255, 0.685);
+    background-color : rgba(255, 255, 255, 0.685);
     margin : 30px 10px;
     padding : 20px 15px;
     
@@ -67,7 +67,7 @@
     position : relative;
     top : -140px;
     padding : 10px 15px;
-    color : #111;
+    color : rgb(71, 83, 255);
     text-align : center;
     
     visibility : hidden;
